Переделал на MapStruct